--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>California Solar Group - Home</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="California Solar Group provides expert solar panel installation, maintenance, and financing services. We offer customizable solar solutions for residential and commercial clients. Experience our exceptional customer service and high-quality equipment. Let's together harness the power of the sun for a sustainable future.">
+  <meta name="keywords" content="California Solar Group, Solar Solutions, Solar Panels, Solar Battery Storage, EV Charging Stations, Solar Consultation, Solar System Design, Solar Installations, Solar Financing, Solar Maintenance, Residential Solar, Commercial Solar, Industrial Solar, Solar Tax Credit, Solar Incentives, High-Quality Solar Equipment, Solar Energy, Renewable Energy, Clean Energy, Green Energy, Sustainability, Solar Power, Solar Technology, Expert Solar Installation">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
