--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -112,6 +112,8 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
+      <a class="call-now-link" href="tel:8449160002">(844) 916-0002</a>
       <a href="get_quote.jsp" class="get-started-btn scrollto">Get Quote</a>
 
     </div>
