--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -104,6 +104,7 @@
               <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
               <li><a class="nav-link scrollto" href="#team">Team</a></li>
               <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+              <li><a class="nav-link scrollto" href="get_quote.jsp">Get Quote</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
