--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -113,6 +113,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
+      <a class="call-now-link-btn" href="tel:8449160002"><i class="fas fa-phone"></i></a>
       <a class="call-now-link" href="tel:8449160002">(844) 916-0002</a>
       <a href="get_quote.jsp" class="get-started-btn scrollto">Get Quote</a>
 
