--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -732,10 +732,10 @@
                   });
                 </script>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://twitter.com/vahanyan14a"><i class="bi bi-twitter"></i></a>
+                  <a href="#"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/vahanyan14a/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/armen-vahanyan-073a2a27b/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
