--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -675,7 +675,7 @@
                 </script>
                 <div class="social">
                   <a href="https://twitter.com/vahanyan14a"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100093579737285"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.instagram.com/vahanyan14a/"><i class="bi bi-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/armen-vahanyan-073a2a27b/"><i class="bi bi-linkedin"></i></a>
                 </div>
