--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -703,6 +703,11 @@
                   });
                 </script>
                 <div class="social">
+                  <a href="https://twitter.com/thomson14ab"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100093495261733"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/thomson14ab/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/danny-thomson-3a6a3027b/"><i class="bi bi-linkedin"></i></a>
+
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
