--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -825,7 +825,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p><a class="call-now-link" href="tel:8449160002">(844) 916-0002</a></p>
+                <p><a href="tel:8449160002">(844) 916-0002</a></p>
               </div>
 
             </div>
