--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -153,7 +153,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-money-dollar-circle-line"></i>
-            <h3><a href="increased_home_value.jsp">3-4% Increased Home Value</a></h3>
+            <h3><a href="increased_home_value.jsp">Home Value Appreciation of Up to 20%</a></h3>
           </div>
         </div>
       </div>
