--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -789,7 +789,7 @@
         </div>
 
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13198.082169262416!2d-118.4930135!3d34.2097248!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c299ba856126d5%3A0xd304ffb7ba22282!2sCA%20Solar%20Group!5e0!3m2!1sen!2sus!4v1687051962189!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13198.082169262416!2d-118.4930135!3d34.2097248!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c299ba856126d5%3A0xd304ffb7ba22282!2sCA%20Solar%20Group!5e0!3m2!1sen!2sus!4v1687051962189!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          
         </div>
 
         <div class="row mt-5">
