--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -156,6 +156,12 @@
             <h3><a href="increased_home_value.jsp">Up to 20% Home Value Increase</a></h3>
           </div>
         </div>
+        <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="ri-sun-line"></i>
+            <h3><a href="a_to_z_solar_install.jsp">A to Z solar installation</a></h3>
+          </div>
+        </div>
       </div>
 
     </div>
