--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -159,7 +159,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-sun-line"></i>
-            <h3><a href="a_to_z_solar_install.jsp">A to Z solar installation</a></h3>
+            <h3><a href="a_to_z_solar_install.jsp">A to Z Solar Installation Service</a></h3>
           </div>
         </div>
       </div>
