--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -738,7 +738,7 @@
                   });
                 </script>
                 <div class="social">
-                  <a href="https://twitter.com/ovakimyan14ab"><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/aovakimyan"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
                   <a href="#"><i class="bi bi-instagram"></i></a>
                   <a href="#"><i class="bi bi-linkedin"></i></a>
