--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -980,7 +980,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>California Solar Group</span></strong>. All Rights Reserved. CSLB NUMBER 1067781
+        &copy; Copyright <strong><span>California Solar Group</span></strong>. All Rights Reserved. CSLB #1067781
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
