--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1018,7 +1018,7 @@
     gtag('config', 'G-Z267KV90QY');
   </script>
 
-  <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
+  <script src="assets/js/acctoolbar.min.js"></script>
   <script>
   // optional init
     window.onload = function() {
