--- a/ROOT/wp.html
+++ b/ROOT/wp.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Display Articles with Bootstrap</title>
+  <title>Display Article Titles with Bootstrap</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>Articles</h1>
-    <div id="articles"></div>
+    <h1>Article Titles</h1>
+    <div id="titles"></div>
   </div>
 
   <script>
@@ -15,34 +15,13 @@
     fetch('https://casolargroup.io/wp-json/wuxt/v1/front-page')
       .then(response => response.json())
       .then(data => {
-        const articlesContainer = document.getElementById('articles');
+        const titlesContainer = document.getElementById('titles');
 
-        // Loop through the articles and create Bootstrap cards
+        // Loop through the articles and display only the titles
         data.articles.forEach(article => {
-          const card = document.createElement('div');
-          card.className = 'card';
-          card.style.width = '18rem';
-
-          const image = document.createElement('img');
-          image.src = article.image;
-          image.className = 'card-img-top';
-          card.appendChild(image);
-
-          const cardBody = document.createElement('div');
-          cardBody.className = 'card-body';
-
           const title = document.createElement('h5');
-          title.className = 'card-title';
           title.textContent = article.title;
-          cardBody.appendChild(title);
-
-          const content = document.createElement('p');
-          content.className = 'card-text';
-          content.textContent = article.content;
-          cardBody.appendChild(content);
-
-          card.appendChild(cardBody);
-          articlesContainer.appendChild(card);
+          titlesContainer.appendChild(title);
         });
       })
       .catch(error => console.error('Error:', error));
