--- a/ROOT/wp.html
+++ b/ROOT/wp.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Display Article Titles with Bootstrap</title>
+  <title>Display Articles with Bootstrap</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>Article Titles</h1>
-    <div id="titles"></div>
+    <h1>Articles</h1>
+    <div id="articles"></div>
   </div>
 
   <script>
@@ -15,13 +15,30 @@
     fetch('https://casolargroup.io/wp-json/wuxt/v1/front-page')
       .then(response => response.json())
       .then(data => {
-        const titlesContainer = document.getElementById('titles');
+        const articlesContainer = document.getElementById('articles');
 
-        // Loop through the articles and display only the titles
+        // Loop through the articles and create Bootstrap cards with title and content
         data.forEach(article => {
+          const card = document.createElement('div');
+          card.className = 'card';
+          card.style.width = '18rem';
+          card.style.marginBottom = '20px';
+
+          const cardBody = document.createElement('div');
+          cardBody.className = 'card-body';
+
           const title = document.createElement('h5');
+          title.className = 'card-title';
           title.textContent = article.title.rendered;
-          titlesContainer.appendChild(title);
+          cardBody.appendChild(title);
+
+          const content = document.createElement('p');
+          content.className = 'card-text';
+          content.innerHTML = article.content.rendered;
+          cardBody.appendChild(content);
+
+          card.appendChild(cardBody);
+          articlesContainer.appendChild(card);
         });
       })
       .catch(error => console.error('Error:', error));
