--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -109,10 +109,11 @@
               <li><a class="nav-link scrollto" href="#services">Services</a></li>
               <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
               <li><a class="nav-link scrollto" href="#team">Team</a></li>
-              <li><a class="nav-link scrollto" href="blog.jsp">Blog</a></li>
+              <li><a class="nav-link scrollto" href="signup.employee.jsp">Customer Portal</a></li>
+              <li><a class="nav-link scrollto" href="signup.jsp">Technicians Portal</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
+          <li><a class="nav-link scrollto" href="blog.jsp">Blog</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
