--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -109,8 +109,8 @@
               <li><a class="nav-link scrollto" href="#services">Services</a></li>
               <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
               <li><a class="nav-link scrollto" href="#team">Team</a></li>
-              <li><a class="nav-link scrollto" href="signup.employee.jsp">Customer Portal</a></li>
-              <li><a class="nav-link scrollto" href="signup.jsp">Technicians Portal</a></li>
+              <li><a class="nav-link scrollto" href="signup.jsp">Customer Portal</a></li>
+              <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="blog.jsp">Blog</a></li>
