--- a/ROOT/404.html
+++ b/ROOT/404.html
@@ -46,8 +46,10 @@
 
 
   <main id="main">
+    <div class="container">
+      <img src="assets/img/404.png" class="img-fluid" alt="404 Image">
+    </div>
 
-    <img src="assets/img/404.png" />
 
   </main><!-- End #main -->
 
