--- a/ROOT/solar_system_design.html
+++ b/ROOT/solar_system_design.html
@@ -88,6 +88,9 @@
   </main><!-- End #main -->
 
   <div id="footer_div" ></div>
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  
   <script id="footer_script" ></script>
 
 <script>
