--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -142,25 +142,25 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="electricity_bill_offset.jsp">100% Electricity Bill Offset</a></h3>
+            <h3><a href="electricity_bill_offset.html">100% Electricity Bill Offset</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="tax_credit.jsp">30% Tax Credit</a></h3>
+            <h3><a href="tax_credit.html">30% Tax Credit</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-money-dollar-circle-line"></i>
-            <h3><a href="increased_home_value.jsp">Up to 20% Home Value Increase</a></h3>
+            <h3><a href="increased_home_value.html">Up to 20% Home Value Increase</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-sun-line"></i>
-            <h3><a href="a_to_z_solar_install.jsp">A to Z Solar Installation Service</a></h3>
+            <h3><a href="a_to_z_solar_install.html">A to Z Solar Installation Service</a></h3>
           </div>
         </div>
       </div>
