--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -113,7 +113,7 @@
               <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="blog.jsp">Blog</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
