--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -163,6 +163,12 @@
             <h3><a href="a_to_z_solar_install.html">A to Z Solar Installation Service</a></h3>
           </div>
         </div>
+        <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="ri-sun-line"></i>
+            <h3><a href="made_in_usa.html">Made in USA</a></h3>
+          </div>
+        </div>
       </div>
 
     </div>
