--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -166,7 +166,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-sun-line"></i>
-            <h3><a href="made_in_usa.html">Made in USA</a></h3>
+            <h3><a href="made_in_usa.html">100% Made in USA</a></h3>
           </div>
         </div>
       </div>
