--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-sun-line"></i>
+            <i class="ri-flag-line"></i>
             <h3><a href="made_in_usa.html">100% Made in USA</a></h3>
           </div>
         </div>
