--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -121,7 +121,7 @@
 
       <a class="call-now-link-btn" href="tel:8449160002"><i class="ri-phone-line"></i></a>
       <a class="call-now-link" href="tel:8449160002">(844) 916-0002</a>
-      <a href="get_quote.jsp" class="get-started-btn scrollto">Get Quote</a>
+      <a href="landingpage" class="get-started-btn scrollto">Get Quote</a>
 
     </div>
   </header><!-- End Header -->
