--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -168,7 +168,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-flag-line"></i>
-            <h3><a href="made_in_usa.html">100% Made in the USA Products</a></h3>
+            <h3><a href="made_in_usa.html">100% Made in the USA Solar Panels</a></h3>
           </div>
         </div>
       </div>
