--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -148,7 +148,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="tax_credit.html">30% Tax Credit</a></h3>
+            <h3><a href="tax_credit.html">30% ITC Federal Tax Credit</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
