--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -143,6 +143,7 @@
           <div class="icon-box">
             <i class="ri-store-line"></i>
             <h3><a href="electricity_bill_offset.html">100% Electricity Bill Offset</a></h3>
+            <p><small>see if you qualify</small></p>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
