--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -142,8 +142,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="electricity_bill_offset.html">100% Electricity Bill Offset</a></h3>
-            <p><small>see if you qualify</small></p>
+            <h3><a href="electricity_bill_offset.html">100% Bill Offset See if You Qualify</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
