--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -293,7 +293,7 @@
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="solar_consultation.html">Solar Consultation</a></h4>
               <p>
-                This service includes a thorough evaluation of the customer's energy needs, site assessment, and solar potential. They provide customized solar system recommendations based on the customer's unique requirements, budget, and preferences.
+                This service includes a thorough evaluation of the customer's energy needs, site assessment, and solar potential. California Solar Group provide customized solar system recommendations based on the customer's unique requirements, budget, and preferences.
               </p>
             </div>
           </div>
