--- a/ROOT/welcome/test.html
+++ b/ROOT/welcome/test.html
@@ -1,6 +1,3 @@
-<%@ page import="java.util.*,java.io.*, java.net.*" %>
-<%@ page import="java.net.URLEncoder" %>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,7 +22,7 @@
   </style>
 </head>
 
-<body onload="initializePage()">
+<body >
 
 
 
@@ -36,6 +33,13 @@
   </div>
   <!-- Google tag (gtag.js) -->
 
+
+
+
+<!-- End Meta Pixel Code -->
+</body>
+
+</html>
 
 
   <script>
@@ -92,9 +96,3 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
   </script>
-
-
-<!-- End Meta Pixel Code -->
-</body>
-
-</html>
