--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1041,7 +1041,11 @@
   </script>
   <!-- Messenger Chat Plugin Code -->
       <div id="fb-root"></div>
-
+      <style>
+        #fb-customer-chat {
+          margin-left: 50px;
+        }
+      </style>
       <!-- Your Chat Plugin code -->
       <div id="fb-customer-chat" class="fb-customerchat">
       </div>
