--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -86,11 +86,6 @@
           margin-right: 10px;
       }
   </style>
-  <style>
-    #fb-customer-chat {
-      margin-left: 50px;
-    }
-  </style>
 
 </head>
 
@@ -1008,7 +1003,9 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div class="d-flex align-items-center justify-content-center">
+    <a href="#" class="back-to-top"><i class="bi bi-arrow-up-short"></i></a>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
