--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1003,9 +1003,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <div class="d-flex align-items-center justify-content-center">
-    <a href="#" class="back-to-top"><i class="bi bi-arrow-up-short"></i></a>
-  </div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
