--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -249,28 +249,28 @@
               <i class="bx bx-receipt"></i>
               <h4>Experience and Expertise</h4>
               <p>
-                People might choose California Solar Group because of their experience and expertise in the solar industry. A company that has been in business for a long time and has a proven track record of successful solar installations might inspire confidence in their ability to deliver quality service.
+                Our Customers chose California Solar Group because of our experience and expertise in the Solar industry. CA Solar Group has hundreds of projects installed and producing throughout Southern California. We have a proven track record of successful Solar PV and Battery Storage installations.We take pride in our ability to deliver quality service to our customers.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-cube-alt"></i>
               <h4>High-Quality Equipment</h4>
               <p>
-                The quality of the solar panels, inverters, and other equipment used in a solar installation can have a significant impact on the system's performance and durability. People might choose a company that uses high-quality equipment from reputable manufacturers to ensure the longevity and efficiency of their solar system.
+                The quality of the solar panels, inverters, battery storage systems and other equipment used in a Solar installation can have a significant impact on the system's performance and durability. California Solar Group is a company that uses high-quality Tier 1 equipment from reputable manufacturers and distributors to ensure the longevity and efficiency of their solar system.This is why we feel confident offering some of the best warranties in the industry.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-images"></i>
               <h4>Financing Options</h4>
               <p>
-                Solar installations can be a significant investment, so people might look for a solar company that offers financing options to make the cost more manageable. Some companies offer a variety of financing options, including leases, loans, and power purchase agreements, to suit different budgets and preferences.
+                Solar installations can be a significant investment for a homeowner. 80% of Solar and Battery Storage projects are financed.California Solar Group offers a variety of competitive financing options to make the cost more manageable for our customers. Each Solar / Battery project is uniquely tailored for the homeowner’s needs. Accordingly, California Solar Group offers financing options to suit different budgets and preferences.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-shield"></i>
               <h4>Customer Service</h4>
               <p>
-                Good customer service is essential when choosing a solar company. People might look for a company that provides clear and transparent communication throughout the installation process, answers questions promptly, and provides ongoing support and maintenance services after the installation is complete.
+                Good customer service is essential when choosing a solar company. At California Solar Group Customer Service is the backbone of our business model.We seek to provide clear and transparent communication throughout the installation process and beyond. California Solar Group considers each and every customer we work with to be a member of our Green Energy Family. We look forward to providing ongoing support and maintenance services for the lifespan of the system which can easily extend past 25 years. In a market saturated with promises and sales pitches, California Solar Group distinguishes itself by striving to give the best customer experience possible. Our motto is a bit old fashioned “The Customer is Always Right” this is our core belief. We are here for our customers, we would not exist without them.
               </p>
             </div>
           </div>
