--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -156,7 +156,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-sun-line"></i>
-            <h3><a href="a_to_z_solar_install.html">Premium Solar and Battery Installer</a></h3>
+            <h3><a href="premium_solar_and_battery_installer.html">Premium Solar and Battery Installer</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
