--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -792,6 +792,81 @@
 
         </div>
 
+                <div class="row">
+
+                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="100">
+                      <div class="member-img">
+                        <img src="assets/img/team/Jansen_O_Young_Project_Manager.jpg" id="image_1" class="img-fluid" alt="">
+                        <div class="social">
+                          <a href="#"><i class="bi bi-twitter"></i></a>
+                          <a href="#"><i class="bi bi-facebook"></i></a>
+                          <a href="#"><i class="bi bi-instagram"></i></a>
+                          <a href="#"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                      </div>
+                      <div class="member-info">
+                        <h4>Jansen O. Young</h4>
+                        <span>Project Manager</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="200">
+                      <div class="member-img">
+                        <img src="assets/img/team/Margarita Ohanyan_Financial_Analyst.jpg" id="image_2a" class="img-fluid" alt="">
+                        <div class="social">
+                          <a href="#"><i class="bi bi-twitter"></i></a>
+                          <a href="#"><i class="bi bi-facebook"></i></a>
+                          <a href="#"><i class="bi bi-instagram"></i></a>
+                          <a href="#"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                      </div>
+                      <div class="member-info">
+                        <h4>Margarita Ohanyan</h4>
+                        <span>Financial Analyst</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="300">
+                      <div class="member-img">
+                        <img src="assets/img/team/Patrick_Henggeler_Sales_Rep.png" id="image_3" class="img-fluid" alt="">
+                        <div class="social">
+                          <a href="#"><i class="bi bi-twitter"></i></a>
+                          <a href="#"><i class="bi bi-facebook"></i></a>
+                          <a href="#"><i class="bi bi-instagram"></i></a>
+                          <a href="#"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                      </div>
+                      <div class="member-info">
+                        <h4>Patrick Henggeler</h4>
+                        <span>Sales Representative</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="400">
+                      <div class="member-img">
+                        <img src="assets/img/team/Artyom_Vardanyan_Installation_Technician.jpg" id="image_4" class="img-fluid" alt="">
+                        <div class="social">
+                          <a href="#"><i class="bi bi-twitter"></i></a>
+                          <a href="#"><i class="bi bi-facebook"></i></a>
+                          <a href="#"><i class="bi bi-instagram"></i></a>
+                          <a href="#"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                      </div>
+                      <div class="member-info">
+                        <h4>Artyom_Vardanyan</h4>
+                        <span>Installation Technician</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
       </div>
     </section><!-- End Team Section -->
 
