--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -833,7 +833,7 @@
                   <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                     <div class="member" data-aos="fade-up" data-aos-delay="300">
                       <div class="member-img">
-                        <img src="assets/img/team/Patrick_Henggeler_Sales_Rep.png" id="image_3" class="img-fluid" alt="">
+                        <img src="assets/img/team/Patrick_Henggeler_Sales_Rep.jpg" id="image_3" class="img-fluid" alt="">
                         <div class="social">
                           <a href="#"><i class="bi bi-twitter"></i></a>
                           <a href="#"><i class="bi bi-facebook"></i></a>
