--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -860,7 +860,7 @@
                         </div>
                       </div>
                       <div class="member-info">
-                        <h4>Artyom_Vardanyan</h4>
+                        <h4>Artyom Vardanyan</h4>
                         <span>Installation Technician</span>
                       </div>
                     </div>
@@ -927,7 +927,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/Artyom_Vardanyan_Installation_Technician.jpg" id="image_4" class="img-fluid" alt="">
+                <img src="assets/img/team/Daniel_Joshua_Dyer_Inspections_Coordinator.jpg" id="image_4" class="img-fluid" alt="">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -936,8 +936,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Artyom_Vardanyan</h4>
-                <span>Installation Technician</span>
+                <h4>Daniel Joshua Dyer</h4>
+                <span>Inspections Coordinator</span>
               </div>
             </div>
           </div>
